Veretino 0.3.10
* The Permanent Filter now has preset templates.
* "Folder Contents" dialog: the database/sha files have become unfilterable.

Veretino 0.3.9
* The checked checksums have become colored.
* The filtered View is highlighted by changing the background.
* A database file with a predefined WorkDir can now be placed in the current one.
* Added the ability to copy files and folders from the database.

Veretino 0.3.8
* Updating the database has become more flexible.
* Added the ability to open previously created Branches.
* The filtered view can also now include independent file statuses.
* Pressing the Escape key disables the filtered view, if any.
* Added a notification about the absence of available files when verifying a subfolder.
* The context menu has been improved.
* The list of filterable extensions has become colored.
* The permanent status has become cleaner during verification.
* Multiple minor improvements...

Veretino 0.3.7
* Fixed a freezing when switching the currently processed database.
* Minor UI improvements.

Veretino 0.3.6
* Added an extended dialog box for file processing results.
* Improved message box about folder verification results.

Veretino 0.3.5
* Added the ability to create separate databases for subfolders based on an existing list of checksums.
* Added a request to continue the process if the filter creation is cancelled.
* minor UI improvements

Veretino 0.3.4
* UI improvements:
    added "Open Recent" menu,
    added a process abort prompt if a transition to other actions (or another DB) is requested,
    added icons to some interface elements,
    the status bar text no longer disappears when the pointer moves to the menu,
    it is now possible to hide any columns except the first one,
    now the status bar displays the presence of a global filter if any,
    permanent status now triggers a Database Status or Settings dialog on a single click

Veretino 0.3.3
* Settings and layout are now saved between sessions.